--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "express": "^4.17.1",
     "moleculer": "^0.13.12",
     "request": "^2.88.0",
+    "uuid": "^3.4.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
     "@babel/node": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
