--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "moleculer": "^0.13.12",
+    "mongodb": "^3.5.2",
+    "mongoose": "^5.8.9",
     "request": "^2.88.0",
     "uuid": "^3.4.0",
     "winston": "^3.2.1"
