--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.3.1",
     "moleculer": "^0.13.12",
     "mongodb": "^3.5.2",
     "mongoose": "^5.8.9",
